cv analyzing with gemini added